# easy-rag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
easy_rag/: __init__.py  chunking.py  cli.py  embeddings.py  llm.py  loaders.py  pipeline.py  sources.py  vectorstore.py  watcher.py
examples/: quickstart.py
examples/docs/: refund-policy.md  shipping-policy.md
tests/: test_chunking.py  test_cli.py  test_embeddings.py  test_llm.py  test_loaders.py  test_pipeline.py  test_sources.py  test_vectorstore.py  test_watcher.py
